# gpt_C_plus_plus

./: README.md
FORTUNA/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
FORTUNA/.github/workflows/: ci.yml
FORTUNA/cmake/: FortunaConfig.cmake.in
FORTUNA/docs/: API.md  MODERNIZATION_SUMMARY.md  ORIGINAL_SPECIFICATION.md
FORTUNA/examples/: CMakeLists.txt  bayesian_regression.cpp  simple_classification.cpp  uncertainty_quantification.cpp  xor_example.cpp
FORTUNA/include/fortuna/: fortuna.hpp
FORTUNA/include/fortuna/bayesian/: prob_classifier.hpp
FORTUNA/include/fortuna/core/: data_loader.hpp  layer.hpp  model.hpp  types.hpp
FORTUNA/include/fortuna/utils/: activations.hpp  initializers.hpp
FORTUNA/src/bayesian/: prob_classifier.cpp
FORTUNA/src/core/: data_loader.cpp  layer.cpp  model.cpp
FORTUNA/src/utils/: activations.cpp  initializers.cpp
GRU/: .gitignore  CMakeLists.txt  GRU_toy_all_helpers.cpp  LICENSE  README.md  concat_gru.cpp  element_wise_vect_fx.cpp  gru_activate_fx.cpp  gru_helper_fx.cpp  rand_vect_matrix.cpp  toy_gru.cpp  toy_gru.txt
GRU/.github/workflows/: ci.yml
GRU/cmake/: GRUConfig.cmake.in
GRU/docs/: ARCHITECTURE.md  CONTRIBUTING.md  MIGRATION.md
GRU/examples/: CMakeLists.txt  basic_gru.cpp  sentiment_analysis.cpp  sequence_processing.cpp
GRU/include/gru/: activation.hpp  gru.hpp  types.hpp  vector_ops.hpp
GRU/src/: gru.cpp
GRU/tests/: CMakeLists.txt  basic_tests.cpp
Kernighan/: libc_so_6.md
PIPER/: Dockerfile  docker-compose.yml  readme.md  requirements.txt
PIPER/benchmark/: criteo_preprocessing.py
PIPER/docs/: architecture.md  migration.md  operators.md  performance.md
PIPER/examples/: neg2zero_pipeline.py  vocab_mapper.py
PIPER/examples/kernels/: CMakeLists.txt  neg2zero_kernel.cpp
PIPER/monitoring/: monitor.py
PIPER/scripts/: install.sh  setup_hugepages.sh  verify_installation.sh
PIPER/tests/: __init__.py  test_operators.py
REALM/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  readme.md  readme_old.md
REALM/cmake/: realmConfig.cmake.in
REALM/docs/: ARCHITECTURE.md
REALM/examples/: CMakeLists.txt  document_retrieval.cpp  mips_benchmark.cpp  simple_rag.cpp  train_rag.cpp
REALM/include/realm/: document_encoder.hpp  generator.hpp  mips.hpp  rag_model.hpp  retriever.hpp  types.hpp
REALM/src/: document_encoder.cpp  generator.cpp  mips.cpp  rag_model.cpp  retriever.cpp  types.cpp
REALM/tests/: CMakeLists.txt  test_document_encoder.cpp  test_generator.cpp  test_mips.cpp  test_rag_model.cpp  test_retriever.cpp  test_types.cpp
arena/: phased_array.cpp
atombuf/: .gitignore  AtomicBuffer.hpp  AtomicBufferBenchmark.cpp  AtomicBufferConfig.cmake.in  AtomicBufferDetailedTest.cpp  AtomicBufferFixed.hpp  AtomicBufferFixedTest.cpp  AtomicBufferLogged.hpp  AtomicBufferLoggedTest.cpp  AtomicBufferMPMC.hpp  AtomicBufferStressTest.cpp  AtomicBufferTerminalTest.cpp  AtomicBufferTest.cpp  CMakeLists.txt  EXAMPLES.md  README.md  atombufreadme.txt
compiler/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  readme.md
compiler/.github/workflows/: ci.yml
compiler/docs/: API.md  ARCHITECTURE.md  USAGE.md
compiler/examples/: README.md
compiler/examples/seed_programs/: example1_simple.c  example2_loops.c  example3_branches.c
compiler/include/compiler_tester/: compiler_interface.hpp  information_injector.hpp  oracle.hpp  program_generator.hpp  reporter.hpp
compiler/scripts/: test_optimization.sh  utils.sh
compiler/src/: compiler_interface.cpp  information_injector.cpp  main.cpp  oracle.cpp  program_generator.cpp  reporter.cpp
depth_first/: .gitignore  CHANGELOG.md  CMakeLists.txt  FileSearchIDDFS.cpp  LICENSE  Makefile  README.md  README.txt
depth_first/.github/workflows/: ci.yml
depth_first/FPSE/: FPSv1.cpp  README.txt
depth_first/completions/: dfs-search.bash  dfs-search.zsh  install.sh
depth_first/docs/: README_old.txt  USAGE.md
depth_first/examples/: README.md  cleanup_backups.sh  find_configs.sh  find_sources.sh
depth_first/include/: config_parser.hpp  content_search.hpp  dfs_search.hpp  file_hash.hpp  output_formatter.hpp  thread_pool.hpp
depth_first/man/: dfs-search.1
depth_first/scripts/: dfs-fzf-enhanced.sh  dfs-fzf.sh
depth_first/src/: FilePatternSearch.cpp  FilePatternSearchExcluded.cpp  IDDFS.cpp  IFS.cpp  IFSAF.cpp  dfs_enhanced.cpp  dfs_main.cpp  dfs_simple.cpp  iddfs_main.cpp
depth_first/src/FPSE/: FPSEv1.4.cpp
depth_first/tests/: test_main.cpp
euler/: dna_seq.c  euler.md  euler_tree.c  readme.md
mlc_meta_learn/: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.txt
mlc_meta_learn/.github/workflows/: ci.yml
mlc_meta_learn/cmake/: MLCConfig.cmake.in
mlc_meta_learn/docs/: API.md  ARCHITECTURE.md  TUTORIAL.md  original_mlc.cpp  original_readme.txt
mlc_meta_learn/examples/: CMakeLists.txt  compositional_test.cpp  simple_example.cpp
mlc_meta_learn/include/mlc/: attention.hpp  episode.hpp  example.hpp  mlc.hpp  mlc_network.hpp  tensor.hpp  trainer.hpp  types.hpp  utils.hpp
mlc_meta_learn/src/: main.cpp
mlc_meta_learn/tests/: CMakeLists.txt  test_episode.cpp  test_example.cpp  test_network.cpp  test_tensor.cpp  test_types.cpp  test_utils.cpp
multinominal_log_reg/: multinomlogreg.mmd
novelty/: CMakeLists.txt  Config.cmake.in  README.md  novelty.txt  novelty_score.cpp
novelty/examples/: CMakeLists.txt  basic_usage.cpp  ensemble_example.cpp  memory_example.cpp  statistical_example.cpp  streaming_data.cpp
novelty/include/: memory_detector.hpp  novelty_attention.hpp  novelty_detector.hpp  novelty_history.hpp  statistical_detector.hpp
novelty/tests/: CMakeLists.txt  compile_test.cpp
